name:                mail
version:             0.1.0.0
homepage:            https://github.com/dbp/mail
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
copyright:           2017 Daniel Patterson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mail
  hs-source-dirs:      app
  main-is:             syncmail.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , imap
                     , rolling-queue
                     , monadIO
                     , shelly
                     , logging
                     , aeson
                     , text
                     , connection
                     , stm
                     , uuid
                     , time
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/dbp/mail
